Test/errors/err_simd_math_non_float.cb
// The simd<T,N> vector-math ops (sqrt, floor, fma, ...) are floating-point only - they
// lower to FP vector intrinsics. Calling one on an integer simd type is a clean error.
extern int main()
{
    i32[] a = new i32[4];
    simd<i32,4> v = simd<i32,4>.load(a, 0);
    expect_error("requires a floating-point element type") {
        simd<i32,4> r = simd<i32,4>.sqrt(v);
    }
}
